package com.cpierres.p13.poc.backend.entity;

public enum UserRole {
    CLIENT,
    AGENT
}